force-app/main/default/objects/Opportunity/fields/Best_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Best_Disposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Best Disposition</label>
    <referenceTo>Dispositions__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>