force-app/main/default/objects/Opportunity/fields/Cancel_Call_Response__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Call_Response__c</fullName>
    <description>Indicates the response of Ubona's Cancel Call Service</description>
    <label>Cancel Call Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>