force-app/main/default/objects/Opportunity/fields/Dialer_Status__c.field-meta.xml
<CustomField>
    <fullName>Dialer_Status__c</fullName>
    <label>Dialer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule Call Request Submitted</fullName>
                <default>true</default>
                <label>Schedule Call Request Submitted</label>
            </value>
            <value>
                <fullName>Schedule Call Request Failed</fullName>
            </value>
            <value>
                <fullName>Schedule Call Request Successful</fullName>
            </value>
            <value>
                <fullName>Cancel Call Request Submitted</fullName>
            </value>
            <value>
                <fullName>Cancel Call Request Failed</fullName>
            </value>
            <value>
                <fullName>Cancel Call Request Successful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>