force-app/main/default/objects/Opportunity/fields/Disposition_Count__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Count__c</fullName>
    <label>Disposition Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>