force-app/main/default/objects/Opportunity/fields/Drop_off_Reason__c.field-meta.xml
<CustomField>
    <fullName>Drop_off_Reason__c</fullName>
    <label>Drop-off Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>