force-app/main/default/objects/Opportunity/fields/Drop_off_URL__c.field-meta.xml
<CustomField>
    <fullName>Drop_off_URL__c</fullName>
    <label>Drop-off URL</label>
    <type>Url</type>
</CustomField>