force-app/main/default/objects/Opportunity/fields/Grace_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_End__c</fullName>
    <formula>Grace_Period_Start__c + 30</formula>
    <label>Grace Period End</label>
    <type>Date</type>
</CustomField>