force-app/main/default/objects/Opportunity/fields/Grace_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Start__c</fullName>
    <formula>Policy_Lapse_Date__c + 1</formula>
    <label>Grace Period Start</label>
    <type>Date</type>
</CustomField>