force-app/main/default/objects/Opportunity/fields/Latest_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Latest_Disposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Disposition</label>
    <referenceTo>Dispositions__c</referenceTo>
    <relationshipLabel>Opportunities (Latest Disposition)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>