force-app/main/default/objects/Opportunity/fields/Max_Upsell__c.field-meta.xml
<CustomField>
    <fullName>Max_Upsell__c</fullName>
    <label>Max Upsell</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>