force-app/main/default/objects/Opportunity/fields/Payment_Link_Response__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Response__c</fullName>
    <description>Used to capture payment link response</description>
    <label>Payment Link Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>