force-app/main/default/objects/Opportunity/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <description>Plan name formula coming from asset Plan_Name__c</description>
    <formula>Policy__r.Plan_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Name</label>
    <type>Text</type>
</CustomField>