force-app/main/default/objects/Opportunity/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>