force-app/main/default/objects/Opportunity/fields/Policy_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Expiry_Date__c</fullName>
    <formula>Policy__r.Maturity_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Expiry Date</label>
    <type>Date</type>
</CustomField>