force-app/main/default/objects/Opportunity/fields/Policy_Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Inception_Date__c</fullName>
    <label>Policy Inception Date</label>
    <type>Date</type>
</CustomField>