force-app/main/default/objects/Opportunity/fields/Policy_Lapse_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Lapse_Date__c</fullName>
    <formula>Policy__r.Maturity_Date__c + 30</formula>
    <label>Policy Lapse Date</label>
    <type>Date</type>
</CustomField>