force-app/main/default/objects/Opportunity/fields/Policy_Lapsed__c.field-meta.xml
<CustomField>
    <fullName>Policy_Lapsed__c</fullName>
    <formula>IF(TODAY() &gt;  Grace_Period_End__c , &apos;Deep Lapsed&apos;, IF(TODAY() &gt;  Policy_Lapse_Date__c , &apos;Lapsed&apos;, &apos;No&apos;))</formula>
    <label>Policy Lapsed</label>
    <type>Text</type>
</CustomField>