force-app/main/default/objects/Opportunity/fields/Policy_Renewal_Notice_Day__c.field-meta.xml
<CustomField>
    <fullName>Policy_Renewal_Notice_Day__c</fullName>
    <formula>Policy__r.Maturity_Date__c - 60</formula>
    <label>Policy Renewal Notice Day</label>
    <type>Date</type>
</CustomField>