force-app/main/default/objects/Opportunity/fields/Propensity_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Propensity_to_Pay__c</fullName>
    <label>Propensity to Pay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>