force-app/main/default/objects/Opportunity/fields/Proposal_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Number__c</fullName>
    <description>Child Proposal Number from JARVIS</description>
    <externalId>true</externalId>
    <label>Proposal Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>