force-app/main/default/objects/Opportunity/fields/Razor_Pay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Razor_Pay_Amount__c</fullName>
    <label>Razor Pay Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>