force-app/main/default/objects/Opportunity/fields/Razor_Pay_Link__c.field-meta.xml
<CustomField>
    <fullName>Razor_Pay_Link__c</fullName>
    <label>Razor Pay Link</label>
    <type>Url</type>
</CustomField>