force-app/main/default/objects/Opportunity/fields/Renewed_Policy__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the new renewed policy</description>
    <label>Renewed Policy</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Opportunities (Renewed Policy)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>