force-app/main/default/objects/Opportunity/fields/Schedule_Request_Response__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Request_Response__c</fullName>
    <description>Response of Ubona Schedule Request</description>
    <label>Schedule Request Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>