force-app/main/default/objects/Opportunity/fields/SystemDate__c.field-meta.xml
<CustomField>
    <fullName>SystemDate__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SystemDate</label>
    <type>Date</type>
</CustomField>