force-app/main/default/objects/Opportunity/fields/Upsell_Eligibility_Flag__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Eligibility_Flag__c</fullName>
    <label>Final Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>