force-app/main/default/objects/Opportunity/fields/Upsell_SI_2__c.field-meta.xml
<CustomField>
    <fullName>Upsell_SI_2__c</fullName>
    <label>Upsell SI 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>