force-app/main/default/objects/Opportunity/recordTypes/HI_Renewals.recordType-meta.xml
<RecordType>
    <fullName>HI_Renewals</fullName>
    <active>true</active>
    <businessProcess>HI Renewals</businessProcess>
    <label>HI Renewals</label>
</RecordType>