force-app/main/default/objects/Opportunity/listViews/bulk_upload_today.listView-meta.xml
<ListView>
    <fullName>bulk_upload_today</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>bulk upload today</label>
    <sharedTo>
        <role>RNWL_Calling_Unit_Manager</role>
    </sharedTo>
</ListView>