force-app/main/default/objects/Opportunity/listViews/Ubona_Cancel_Call_Failures.listView-meta.xml
<ListView>
    <fullName>Ubona_Cancel_Call_Failures</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Policy__c</columns>
    <columns>Proposal_Number__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Cancel_Call_Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dialer_Status__c</field>
        <operation>equals</operation>
        <value>Cancel Call Request Failed</value>
    </filters>
    <label>Ubona Cancel Call Failures</label>
</ListView>