force-app/main/default/objects/Opportunity/listViews/Ubona_Schedule_Call_Failures.listView-meta.xml
<ListView>
    <fullName>Ubona_Schedule_Call_Failures</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dialer_Status__c</field>
        <operation>equals</operation>
        <value>Schedule Call Request Failed</value>
    </filters>
    <label>Ubona Schedule Call Failures</label>
</ListView>